# polytheus-backend

./: .gitignore  Cargo.toml
.github/: copilot-instructions.md
aws-lambda/: Cargo.toml  README.md
aws-lambda/src/: http_handler.rs
benchmark/: Cargo.toml
benchmark/src/: benchmark.rs  main.rs
src/: api.rs  lib.rs  main.rs  open_ai_api.rs  polytheus.rs
src/ai_mnemosyne/: ai_mnemosyne.rs  ai_mnemosyne_impl.rs  ai_mnemosyne_type.rs  mod.rs
src/api/: open_ai.rs
src/hosting_method/: aws_lambda.rs
src/polytheus/: benchmark.rs  licence.rs  model.rs  organization.rs
tests/: llm_tests.rs
